cmake_minimum_required(VERSION 3.22.1)
project(BeginningEngineDebugMemInfo)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -g -O0")
add_library(BeginningEngineDebugMemInfo STATIC BeginningEngineDebugMemInfo.cpp)
if(NOT CMAKE_BUILD_TYPE)
    set(CMAKE_BUILD_TYPE Debug)
endif()
find_library(LIBDW dw)
if(NOT LIBDW)
    message(FATAL_ERROR "libdw not found")
endif()
target_include_directories(BeginningEngineDebugMemInfo PRIVATE /usr/include/elfutils/)
target_link_libraries(BeginningEngineDebugMemInfo ${LIBDW})

